--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-
+/*mobile/tablet display*/
 * {
   box-sizing: border-box;
 }
@@ -69,4 +69,46 @@ main {
   border: 5px solid #000;
   padding: 0.5em 1em;
   color: #fff;
+}
+
+/*desktop display*/
+@media (min-width: 1024px) {
+  header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  header nav ul {
+    display: flex;
+  }
+
+  header a {
+    border-top: none;
+  }
+
+  main {
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    gap: 20px;
+  }
+
+  .cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-auto-rows: minmax(100px, auto);
+    gap: 20px;
+  }
+
+  aside {
+    margin-top: 24px;
+  }
+}
+
+/*layout for screens wider than 2200px*/
+@media (min-width: 2190px) {
+  body {
+    width: 2190px;
+    margin-inline: auto;
+  }
 }
